[tool.poetry]
name = "django-beginner-project"
version = "0.1.0"
description = ""
authors = ["alenjam <alenjam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
